--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,7 +10,7 @@
 }
 
 .wrapper {
-  border: 3px rgb(255, 255, 255) solid;
+  border: 3px rgb(191, 215, 252) solid;
   border-radius: 3px;
 }
 
@@ -34,13 +34,14 @@
   background-color: rgb(167, 167, 167);
 }
 
-.menu_search {
+.search_input {
   padding: 10px 20px;
   background-color: white;
   border: none;
   border-radius: 3px;
   font-size: 18px;
   margin-right: 10px;
+  outline: 0;
 }
 
 .list {
@@ -66,4 +67,110 @@
 
 .del_btn:hover {
   background-color: rgb(167, 167, 167);
+}
+
+.modal_none {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 99997;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal_new_task_window {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 99997;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal_edit_task_window {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 99998;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal_btn {
+  margin-top: 30px;
+  padding: 10px 20px;
+  background-color: white;
+  border: none;
+  border-radius: 3px;
+  font-size: 18px;
+}
+
+.modal_btn:hover {
+  background-color: rgb(167, 167, 167);
+}
+
+.modal_title {
+  margin-bottom: 20px;
+}
+
+.modal_box {
+  text-align: center;
+  padding: 5px 5px;
+  max-width: 500px;
+  padding: 45;
+  z-index: 1;
+  background-color: #344f85;
+  border: 3px rgb(191, 215, 252) solid;
+  border-radius: 5px;
+}
+
+.modal_btn_wrapper {
+  display: flex;
+  justify-content: flex-end;
+  padding-bottom: 20px;
+}
+
+.modal_input {
+  width: 300px;
+  font-size: 18px;
+  outline: 0;
+  padding: 0px 10px;
+  margin: 0px 40px;
+}
+
+.loader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 30px;
+  height: 30px;
+  border: 5px solid white;
+  border-radius: 50%;
+  border-left-color: transparent;
+  animation: loader 1s infinite;
+}
+
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
