--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,13 @@ body a {
   color: #ffffff;
 }
 
+button {
+  background-color: #4c628d;
+  border: none;
+  cursor: pointer;
+  color: #ffffff;
+}
+
 .app {
   text-align: center;
   background-color: #282c34;
@@ -16,6 +23,15 @@ body a {
 }
 
 .app h1 {
+  width: 250px;
   padding-bottom: 10px;
   border-bottom: 2px solid #ffffff;
+  cursor: pointer;
+  transition: width 0.4s;
+}
+
+.app h1:hover {
+  width: 350px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #000000;
 }
