--- a/src/components/ModalWindow/ModalWindow.module.css
+++ b/src/components/ModalWindow/ModalWindow.module.css
@@ -1,69 +1,70 @@
 .modal_none {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 99997;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    visibility: hidden;
-    opacity: 0;
-  }
-  
-  .modal_new_task_window {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 99997;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  .modal_btn {
-    margin-top: 30px;
-    padding: 10px 20px;
-    background-color: white;
-    border: none;
-    border-radius: 3px;
-    font-size: 18px;
-  }
-  
-  .modal_btn:hover {
-    background-color: rgb(167, 167, 167);
-  }
-  
-  .modal_title {
-    margin-bottom: 20px;
-  }
-  
-  .modal_box {
-    text-align: center;
-    padding: 5px 5px;
-    max-width: 500px;
-    padding: 45;
-    z-index: 1;
-    background-color: #344f85;
-    border: 3px rgb(191, 215, 252) solid;
-    border-radius: 5px;
-  }
-  
-  .modal_btn_wrapper {
-    display: flex;
-    justify-content: flex-end;
-    padding-bottom: 20px;
-  }
-  
-  .modal_input {
-    width: 300px;
-    font-size: 18px;
-    outline: 0;
-    padding: 0px 10px;
-    margin: 0px 40px;
-  }
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 99997;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal_new_task_window {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 99997;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal_btn {
+  color: black;
+  margin-top: 30px;
+  padding: 10px 20px;
+  background-color: white;
+  border: none;
+  border-radius: 3px;
+  font-size: 18px;
+}
+
+.modal_btn:hover {
+  background-color: rgb(167, 167, 167);
+}
+
+.modal_title {
+  margin-bottom: 20px;
+}
+
+.modal_box {
+  text-align: center;
+  padding: 5px 5px;
+  max-width: 500px;
+  padding: 45;
+  z-index: 1;
+  background-color: #344f85;
+  border: 3px rgb(191, 215, 252) solid;
+  border-radius: 5px;
+}
+
+.modal_btn_wrapper {
+  display: flex;
+  justify-content: flex-end;
+  padding-bottom: 20px;
+}
+
+.modal_input {
+  width: 300px;
+  font-size: 18px;
+  outline: 0;
+  padding: 0px 10px;
+  margin: 0px 40px;
+}
