--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -6,10 +6,14 @@
 }
 
 .show_task {
-  font-size: 16px;
+  font-size: 18px;
   visibility: visible;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
   opacity: 1;
   width: 750px;
+  overflow: hidden;
 }
 
 .task:hover {
